<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.weatherforecast.home.view.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/alert"
        android:name="com.example.weatherforecast.alert.AlertFragment"
        android:label="@string/alert"
        tools:layout="@layout/fragment_alert" />
    <fragment
        android:id="@+id/map"
        android:name="com.example.weatherforecast.map.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/favourite"
        android:name="com.example.weatherforecast.favourite.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite" />
    <fragment
        android:id="@+id/settings"
        android:name="com.example.weatherforecast.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>